# django-zk-locks

./: Makefile  README.rst  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml
database_locks/: __init__.py  apps.py  locks.py
database_locks/migrations/: 0001_initial.py
tests/: manage.py  settings.py  settings_mysql.py  settings_postgresql.py  urls.py
tests/tests/: tests.py
tests/tests/management/commands/: db_lock_it.py  lock_it.py
zookeeper_locks/: __init__.py
