[metadata]
name = django-zookeeper-locks
version = 0.0.1
description =  Distributed locks for Django using Zookeeper.
long_description = file: README.rst
author = Duarte Duarte
author_email = dnpd.dd@gmail.com
url = https://github.com/DDuarte/django-zookeeper-locks
download_url = https://pypi.org/project/django-zookeeper-locks/
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
install_requires =
    Django >= 3.2, < 6
    kazoo >= 2.10.0
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
exclude = conf.py
ignore = E203,W503
max-line-length = 88

[coverage:run]
source = zookeeper_locks

[coverage:report]
show_missing = true
